--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             border-radius: 5px;
             transition: all 0.3s ease;
             text-align: center;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
         }
 
         .sidebar a:hover {
@@ -56,7 +56,7 @@
 
         /* Section Styling */
         .section {
-            padding: 60px;
+            padding: 80px;
             background-color: #ecf0f1;
             margin-left: 240px;
             width: calc(100% - 240px);
@@ -87,40 +87,41 @@
         }
 
         .hero h1 {
-            font-size: 4.5rem;
+            font-size: 5rem;
             margin-bottom: 30px;
             letter-spacing: 2px;
         }
 
         .hero p {
-            font-size: 1.8rem;
+            font-size: 2rem;
             margin-bottom: 40px;
+            line-height: 1.6;
         }
 
-        .skills, .statistics {
+        .skills {
             margin-top: 30px;
             font-size: 1.5rem;
         }
 
-        .skills ul, .statistics ul {
+        .skills ul {
             list-style-type: none;
         }
 
-        .skills ul li, .statistics ul li {
+        .skills ul li {
             padding: 10px 0;
         }
 
         /* Expanded Content Styling */
         h2 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             margin-bottom: 20px;
             color: #2980b9;
         }
 
         p {
-            font-size: 1.5rem;
-            line-height: 1.8;
-            margin-bottom: 20px;
+            font-size: 1.7rem;
+            line-height: 1.9;
+            margin-bottom: 30px;
         }
 
         img {
@@ -143,61 +144,57 @@
         <a href="#" onclick="showSection('about')">About Us</a>
     </div>
 
-    <!-- Landing Page -->
+    <!-- Landing Page (Longer and More Detailed) -->
     <section id="landing" class="section active">
         <div class="hero">
             <div class="hero-content">
                 <h1>Echo Flare Digital</h1>
-                <p>Boost your business with tailored social media strategies!</p>
+                <p>Welcome to Echo Flare Digital, a new and ambitious digital marketing agency focused on driving business growth for coaches and consultants. Though we are new to the market, our passion and expertise set us apart. We are committed to helping professionals establish their brand and grow their client base through tailored social media strategies.</p>
+                <p>We are excited to embark on this journey and are eager to deliver results for our first clients. Your brand deserves to stand out, and we are here to make that happen through customized, high-impact digital marketing solutions.</p>
                 <div class="skills">
                     <h2>Our Expertise</h2>
                     <ul>
-                        <li>Meta Ads</li>
-                        <li>Advertising</li>
-                        <li>Content Creation</li>
-                    </ul>
-                </div>
-                <div class="statistics">
-                    <h3>Business Statistics</h3>
-                    <ul>
-                        <li>100+ successful campaigns</li>
-                        <li>20+ consultants helped</li>
-                        <li>85% client retention</li>
+                        <li><strong>Meta Ads:</strong> Targeted ads on Facebook and Instagram to maximize your brand's reach.</li>
+                        <li><strong>Content Creation:</strong> Crafting engaging, professional content to attract and retain clients.</li>
+                        <li><strong>Strategy & Consulting:</strong> Personalized marketing plans designed to meet your specific goals and challenges.</li>
                     </ul>
                 </div>
             </div>
         </div>
+        <p style="text-align: center; margin-top: 40px; font-size: 1.8rem;">Let us be the force behind your digital transformation!</p>
+        <img src="https://via.placeholder.com/1200x600" alt="Digital Strategy Image">
     </section>
 
     <!-- Section 1: Coaches & Consultants -->
     <section id="niche" class="section hidden">
-        <h2>Coaches & Consultants</h2>
-        <p>Coaches and consultants need strong marketing strategies to grow their businesses. Our services focus on creating targeted advertising campaigns to help you reach more potential clients, enhance brand visibility, and generate leads.</p>
-        <p>With the right social media strategy, you'll be able to reach the right audience and turn leads into loyal clients. Let us help you craft a plan that will maximize your brand's potential.</p>
-        <img src="https://via.placeholder.com/800x400" alt="Coaches and Consultants">
+        <h2>For Coaches & Consultants</h2>
+        <p>As a coach or consultant, your business depends on building relationships and trust with your clients. But how do you stand out in an increasingly crowded digital space? At Echo Flare Digital, we specialize in creating tailored digital marketing solutions that help you reach the right audience and grow your brand’s authority.</p>
+        <p>From social media campaigns to content marketing, we work with you to build a strong online presence that attracts potential clients and builds long-lasting relationships. Our services are designed to make your voice heard in the marketplace, no matter how competitive it is.</p>
+        <img src="https://via.placeholder.com/1200x600" alt="Coaches and Consultants">
     </section>
 
     <!-- Section 2: Problem Submission Form -->
     <section id="form" class="section hidden">
         <h2>Problem Submission Form</h2>
-        <p>Tell us what challenges you're facing in your business, and we'll craft a strategy to address them. Our solutions are tailored to your unique needs, ensuring effective results.</p>
+        <p>Are you facing specific challenges in your business? We’re here to listen and help. Fill out the form below to tell us about the problems you’re encountering, and we will develop a custom strategy to tackle them. Your success is our priority, and we’re committed to providing solutions that deliver results.</p>
         <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform" width="100%" height="600" frameborder="0">Loading…</iframe>
+        <img src="https://via.placeholder.com/1200x600" alt="Form Submission">
     </section>
 
     <!-- Section 3: Advertising Services -->
     <section id="advertising" class="section hidden">
         <h2>Advertising Services</h2>
-        <p>Advertising is a powerful tool for lead generation. We help you create compelling campaigns that target the right audience to boost your brand’s visibility and bring in high-quality leads.</p>
-        <p>With platforms like Meta and Instagram, we ensure that your ads reach the most relevant users, converting them into potential clients. Our data-driven strategies will help you optimize your ad spend for maximum impact.</p>
-        <img src="https://via.placeholder.com/800x400" alt="Advertising Services">
+        <p>In today’s digital-first world, advertising is essential to growing your business. At Echo Flare Digital, we create data-driven, results-oriented advertising campaigns that are tailored to your specific goals. Whether you want to increase brand awareness or generate leads, we provide the strategies and tools you need to succeed.</p>
+        <p>Our campaigns on platforms like Facebook and Instagram are designed to maximize your return on investment. We focus on reaching the right audience at the right time with the right message, ensuring that every ad dollar you spend delivers maximum value.</p>
+        <img src="https://via.placeholder.com/1200x600" alt="Advertising Services">
     </section>
 
     <!-- Section 4: About Us -->
     <section id="about" class="section hidden">
-        <h2>About Us</h2>
-        <p>Echo Flare Digital is a leading digital marketing agency focused on helping coaches and consultants grow their businesses through smart, affordable advertising solutions.</p>
-        <p>Founded in 2021, our agency has worked with a variety of clients, from small businesses to large enterprises. Our team is committed to delivering measurable results that matter to you. Trust us to take your brand to the next level.</p>
-        <img src="https://via.placeholder.com/800x400" alt="About Us">
+        <h2>About Echo Flare Digital</h2>
+        <p>Founded in 2024, Echo Flare Digital is a new and dynamic agency dedicated to helping coaches, consultants, and small businesses grow their online presence. Our team of digital marketing experts is passionate about using the latest tools and techniques to drive results that matter.</p>
+        <p>Although we are just starting out, our goal is to build strong, long-term partnerships with our clients. We are driven by creativity, data, and a relentless pursuit of excellence. Join us on this exciting journey, and let’s grow together.</p>
+        <img src="https://via.placeholder.com/1200x600" alt="About Us">
     </section>
 
     <script>
@@ -206,9 +203,11 @@
             const sections = document.querySelectorAll('.section');
             sections.forEach(section => {
                 section.classList.remove('active');
+                section.classList.add('hidden');
             });
 
             const selectedSection = document.getElementById(sectionId);
+            selectedSection.classList.remove('hidden');
             selectedSection.classList.add('active');
         }
     </script>
